--- a/src/main/resources/templates/readOne.html
+++ b/src/main/resources/templates/readOne.html
@@ -8,9 +8,8 @@
 <body>
 <h1>상품수정</h1>
 <form method="post" action="/update_done" th:object="${dto}">
-
-    상품아이디<input type="text" name="productId" th:field="*{productId}" ><br/>
-    상품명<input type="text" name="productName" th:field="*{productName}" ><br/>
+    상품아이디 : <input type="text" name="productId" th:field="*{productId}" ><br/>
+    상품명 : <input type="text" name="productName" th:field="*{productName}" ><br/>
     <button type="submit">등록완료</button>
 </form>
 </body>
